1999-05-05  Alex Lancaster  <alex@santafe.edu>

	* user2.06.sgml: Fix markup for ITEMIZEDLISTs, make last
	ITEMIZEDLIST an ORDEREDLIST.  Add detailed markup for all
	variables (VARNAME), classes and protocols (CLASSNAME), files
	(FILENAME), methods and functions (FUNCTION), GUI button names
	(GUIBUTTON), application names (APPLICATION).  Use COMMENT to tag
	all internal editorial comments.
 
1999-04-06  Alex Lancaster  <alex@santafe.edu>

	* userbook.sgml: Update PUBLIC identifier for DTD to
	"-//OASIS//DTD DocBook V3.1//EN"
	Remove JPEG notation class - now part of the 3.1 DTD.

	* userbook.tex.in: Include macros.tex from $(top_srcdir)/tex.

1999-03-15  Paul E. Johnson  <pauljohn@valinux.pols.ukans.edu>

	* user2.04.sgml: Wrote an OK chapter about scheduling, with a
	totally kickass treatment of M() and selectors, and ran out of 
	gas while trying to write about ActionGroups. I'll have to come
	back to that.

1999-03-05  Paul E. Johnson  <pauljohn@valinux.pols.ukans.edu>

	* user2.05.sgml (elementFromList): This is a chapter about Lists.
	(elementFromList): First draft submitted today!

	* user2.04.sgml (t): This place-holder section is to be about
 	scheduling in Swarm. Was previously in user2.06.sgml. Did not
 	write it yet.

1999-03-03  Alex Lancaster  <alex@santafe.edu>

	* user1.02.sgml: Use INDEXTERMS consistently within document.

	* user1.04.sgml: Add several INDEXTERMS - one for `Swarm' and
	anthor for primary and auxiliary `agents'.

	* Makefile.am (genindex.sgml): Use `-i' option to collateindex.pl
	to set the ID in the generated INDEX SGML tag.

	* html.dsl (toc-depth): Make `book' TOC 3-deep, `chapter' TOC
	1-deep.  Remove `set' depth - not needed.

1999-03-02  Alex Lancaster  <alex@santafe.edu>

	* userbook.sgml: Remove local variable sgml-default-dtd-file.

	* user2.02.sgml (Object creation): Clarify rules of thumb on
	header file importation.
	Indenting and reformatting throughout.

	* usermeta.sgml: Add RELEASEINFO and PUBDATE tags, use ENTITIES